# python_project_template

./: .vsixmanifest  CHANGELOG.md  README.md  package.json
templates/: .gitignore  CHANGELOG.md  README.md  _clear_console.py  alias_mypython.sh  bump.py  config.json  create_venv.sh  get_version.py  list_scripts.py  main.py  pyproject.toml  python.code-snippets  remove_venv.sh  remove_venv_recursively.sh  run.bat  run.sh  setup.py  update_package.sh
